# Raspberry-Pi

./: README.md  netplan config file  raspberry pi to do
control_ws/: README.md  base_link  to do
control_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
control_ws/install/diff_drive/include/diff_drive/diff_drive/: diffdrive_system.hpp  wheel.hpp
control_ws/install/diff_drive/share/diff_drive/: diff_drive.xml  local_setup.dsv  local_setup.sh  package.sh
control_ws/install/diff_drive/share/diff_drive/cmake/: export_diff_driveExport.cmake
control_ws/install/diff_drive/share/diff_drive/urdf/: diff_drive_description.urdf.xacro
control_ws/install/three_wheel/include/three_wheel/three_wheel/: dead_wheel.hpp  drive_wheel.hpp  visibility_control.h
control_ws/install/three_wheel/share/ament_index/resource_index/package_run_dependencies/: three_wheel
control_ws/install/three_wheel/share/three_wheel/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
control_ws/install/three_wheel/share/three_wheel/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_three_wheelExport-noconfig.cmake  export_three_wheelExport.cmake
control_ws/install/three_wheel/share/three_wheel/config/: joystick.yaml  three_wheel_controller.yaml
control_ws/install/three_wheel/share/three_wheel/launch/: three_wheel.launch.py
control_ws/install/three_wheel/share/three_wheel/urdf/: three_wheel.urdf.xacro
control_ws/log/: latest_build
control_ws/src/diff_drive/: CMakeLists.txt  package.xml
control_ws/src/diff_drive/bringup/config/: diff_drive_controllers.yaml
control_ws/src/diff_drive/bringup/launch/: diff_drive.launch.py  joystick.launch.py
control_ws/src/diff_drive/description/ros2_control/: diff_drive.ros2_control.xacro
control_ws/src/diff_drive/description/urdf/: diff_drive.urdf.xacro
control_ws/src/diff_drive/hardware/: diffdrive_system.cpp
control_ws/src/three_wheel/: CMakeLists.txt  three_wheel.xml
control_ws/src/three_wheel/description/ros2_control/: three_wheel.ros2_control.xacro
control_ws/src/three_wheel/description/urdf/: three_wheel_description.urdf.xacro
control_ws/src/three_wheel/hardware/: threewheel_system.cpp
control_ws/src/three_wheel/hardware/include/three_wheel/: threewheel_system.hpp
controller_ws/: documentation
controller_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
controller_ws/install/diff_drive_controller/share/diff_drive_controller/: local_setup.sh  package.sh
controller_ws/install/diff_drive_controller/share/diff_drive_controller/cmake/: export_diff_drive_controllerExport.cmake
controller_ws/install/three_omniwheel_controller/include/three_omniwheel_controller/three_omniwheel_controller/: odometry.hpp  speed_limiter.hpp
controller_ws/install/three_omniwheel_controller/share/ament_index/resource_index/controller_interface__pluginlib__plugin/: three_omniwheel_controller
controller_ws/install/three_omniwheel_controller/share/three_omniwheel_controller/: local_setup.dsv  local_setup.sh  package.ps1  package.sh  three_omniwheel_plugin.xml
controller_ws/install/three_omniwheel_controller/share/three_omniwheel_controller/cmake/: three_omniwheel_controllerConfig.cmake
controller_ws/log/: latest_build
controller_ws/src/diff_drive_controller/src/: diff_drive_controller.cpp
controller_ws/src/three_omniwheel_controller/: CMakeLists.txt
controller_ws/src/three_omniwheel_controller/include/three_omniwheel_controller/: visibility_control.h
controller_ws/src/three_omniwheel_controller/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
controller_ws/src/three_omniwheel_controller/install/three_omniwheel_controller/include/three_omniwheel_controller/three_omniwheel_controller/: odometry.hpp  three_omniwheel_controller.hpp
controller_ws/src/three_omniwheel_controller/install/three_omniwheel_controller/share/ament_index/resource_index/parent_prefix_path/: three_omniwheel_controller
controller_ws/src/three_omniwheel_controller/install/three_omniwheel_controller/share/three_omniwheel_controller/: package.bash  package.dsv  package.sh  package.zsh
controller_ws/src/three_omniwheel_controller/install/three_omniwheel_controller/share/three_omniwheel_controller/cmake/: ament_cmake_export_targets-extras.cmake  export_three_omniwheel_controllerExport-noconfig.cmake
controller_ws/src/three_omniwheel_controller/log/: latest_build
controller_ws/src/three_omniwheel_controller/src/: odometry.cpp  speed_limiter.cpp  three_omniwheel_controller.cpp  three_omniwheel_controller_parameter.yaml
data/: cmd  hardware_interface
data/URDF/: activity_robot.urdf  frames_2025-01-11_16.41.28.gv  my_robot.urdf  urdf_template.urdf
data/maps/: maze.pgm  maze.yaml  maze_old.pgm  myWorld.pgm  myWorld.yaml  myWorld_old.pgm  my_house.pgm  my_house.yaml  my_house_old.pgm  my_map.pgm  my_map.yaml  slam_world.pgm  slam_world.yaml
data/rviz configs/: slam_config.rviz  slam_config_2.rviz
data/worlds/: myWorld.world  myWorld2.world
microRos_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
microRos_ws/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.2
microRos_ws/install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
microRos_ws/install/micro_ros_agent/share/micro_ros_agent/: local_setup.sh  package.sh
microRos_ws/install/micro_ros_msgs/share/micro_ros_msgs/: package.sh
microRos_ws/install/micro_ros_setup/share/micro_ros_setup/: package.sh
microRos_ws/log/: latest_build
microRos_ws/src/diff_drive_uros/: platformio.ini
microRos_ws/src/diff_drive_uros/src/: main.cpp
microRos_ws/src/microRos_test/: platformio.ini
microRos_ws/src/microRos_test/src/: main.cpp
microRos_ws/src/three_wheel_uros/: platformio.ini
microRos_ws/src/three_wheel_uros/src/: main.cpp
